# shunt

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.ja.md  README.ko.md  README.md  README.zh-CN.md  codecov.yml  release-please-config.json  shunt.toml.example
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agent-memory/github-pr-manager/: reference_shunt-pr-template-and-quirks.md
.claude/agent-memory/review-review-code-reviewer/: MEMORY.md  shunt-issue48-retry-backoff-pr122.md
.claude/agent-memory/review-review-comment-analyzer/: MEMORY.md  shunt-account-scan-cache-comment-rot.md  shunt-responses-adapter-stream-json-doc-generalization.md
.claude/agent-memory/review-review-documentation-analyzer/: MEMORY.md  project_shunt_pr103_i18n_comparison_review.md  shunt_config_reload_doc_review_traps.md  shunt_i18n_docs_structure.md  shunt_pr142_oauth_login_docs_review.md  shunt_retry_docs_fan_out.md
.claude/agent-memory/review-review-issue-fixer/: MEMORY.md  codex-quota-stable-identity.md
.claude/agent-memory/review-review-pr-test-analyzer/: MEMORY.md  shunt-account-scan-cache-coverage.md  shunt-client-usage-fable-coverage.md  shunt-codex-admin-coverage.md
.claude/agent-memory/review-review-security-reviewer/: MEMORY.md  project_claude-token-url-egress.md  project_pr144-codex-admin-provisioning-security.md  project_retry-backoff-security.md  project_sentry-pii-egress.md
.claude/agent-memory/review-review-silent-failure-hunter/: MEMORY.md  issue113-responses-status-threading.md  pr122-retry-observability-gap.md  pr144-codex-admin-error-handling.md
.claude/agent-memory/review-review-spec-compliance-checker/: MEMORY.md  project_issue48-retry-verification.md
.claude/agent-memory/review-review-type-design-analyzer/: shunt-adapter-type-patterns.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codspeed.yml  deploy-docs.yml  release-please.yml  release.yml
.please/docs/decisions/: 0001-per-provider-upstream-model-map.md  0002-ordered-upstreams-failover.md  index.md
.please/docs/review/: rejected-findings.jsonl
.please/state/: review-threads-66.json
benches/: gateway.rs
blueprints/provider/: _generic.md
blueprints/upstream/: _generic.md  anthropic.md  codex.md  cursor.md  grok.md  kimi.md  openai.md  xai.md
docs/: RELEASING.md  add-command.md  codex-configuration.md  comparison.md  desktop-app.md  gateway-login.md  gateway-managed-settings.md  gateway-protocol.md  gateway-protocol.raw.md  m1-responses-translation.md  m10-codex-multi-account.md  m11-inbound-codex-endpoint.md  m12-client-usage-endpoint.md  m14-oauth-usage-endpoint.md  m2-chatgpt-oauth.md  m3-discovery.md  m6-xai-provider.md  m7-codex-websocket.md  m8-anthropic-multi-account.md  m9-admin-surface.md  running.md  upstreams-failover.md
docs/notes/: gemini-provider-capacity-and-models.md  issue-gemini-3.1-capacity.md
docs/plans/gemini-provider/: FINDINGS-nonstreaming.md  STATUS.md  TICKETS.md
docs/plans/gemini-provider/logs/: 2026-07-21_C1-config-foundation.md  2026-07-21_S1-auth-spike.md  2026-07-22_wave2-auth-and-request-translation.md
docs/plans/live-activity/: STATUS.md  TICKETS.md  tickets.json
docs/plans/live-activity/logs/: 2026-07-18_A1.md  2026-07-18_plan-created.md
docs/plans/usage-bars/: DESIGN.md  issues.md
plugins/shunt-codex/: README.md
plugins/shunt-codex/.claude-plugin/: plugin.json
plugins/shunt-codex/agents/: gpt-5.6-luna.md  gpt-5.6-sol.md  gpt-5.6-terra.md
plugins/shunt-kimi/: README.md
site/: .gitignore  README.md  astro.config.mjs  astro.config.ts  package-lock.json  package.json
site/src/: components.ts  content.config.ts
site/src/components/: Header.astro  Render.astro
site/src/components/ui/badge/: Badge.astro
site/src/components/ui/banner/: banner.client.ts
site/src/components/ui/breadcrumbs/: Breadcrumbs.astro
site/src/components/ui/button/: Button.astro  variants.ts
site/src/components/ui/code/: Code.astro
site/src/components/ui/dialog/: Dialog.astro
site/src/content/docs/: index.mdx
site/src/content/partials/: example.mdx
site/src/layouts/: BaseLayout.astro  DocsLayout.astro
site/src/lib/: i18n.ts
site/src/pages/: 404.astro  [...slug].astro  llms-full.txt.ts  llms.txt.ts  og.png.ts
site/src/pages/[...slug]/: index.md.ts  index.mdx.ts
site/src/pages/[section]/: llms.txt.ts
site/src/pages/og/: [...slug].ts  _og-card-config.ts
site/src/styles/: globals.css  prose.css
site/worker/: index.ts
src/: accounts.rs  activity.rs  blueprints.rs  codex_analytics.rs  codex_endpoint.rs  config.rs  count_tokens.rs  dashboard.rs  discovery.rs  error.rs  init.rs  lib.rs  main.rs  metrics.rs  oauth_usage.rs  proxy.rs  reload.rs  retry.rs  routes.rs  routing.rs  server.rs  stream_metrics.rs  usage.rs  usage_poll.rs
src/adapters/: anthropic.rs  mod.rs  responses.rs
src/adapters/anthropic/: mod.rs
src/adapters/antigravity/: mod.rs
src/adapters/cursor/: client.rs  connect.rs  mod.rs  sse.rs  stream.rs
src/adapters/gemini/: mod.rs
src/adapters/responses/: codex_continuation.rs  codex_ws.rs  context.rs  error.rs  http.rs  inbound.rs  mod.rs  pool.rs  request.rs  websocket.rs  ws_stream.rs
src/admin/: codex.rs  html.rs  mod.rs  session.rs
src/auth/: claude_auth.rs  claude_store.rs  codex_auth.rs  cursor_auth.rs  mod.rs  observation.rs  shared.rs  xai_auth.rs  xai_login.rs
src/auth/claude/: auth.rs  callback.rs  login.rs  mod.rs  store.rs  usage.rs
src/auth/claude/auth/: tests.rs
src/auth/codex/: auth.rs  login.rs  store.rs
src/auth/google/: auth.rs  mod.rs
src/gateway/: device.rs  idp.rs  idp_client.rs  managed.rs  mod.rs  persist.rs  store.rs  tests.rs
src/model/: gemini.rs  gemini_request.rs  mod.rs  responses.rs  responses_request.rs
src/oauth_usage/: tests.rs
src/stream_metrics/: tests.rs
src/usage/: tests.rs
tests/: add_cli.rs  admin_surface.rs  antigravity_translate.rs  codex_multi_account.rs  codex_websocket_fallback.rs  gemini_translate.rs  inbound_auth.rs  inbound_codex_endpoint.rs  multi_account.rs  passthrough.rs  responses_translate.rs  retry.rs
(+166 files in other folders)
