[package]
# crates.io package name; the library and binary keep the short name `shunt`
# (the bare `shunt` crate name is taken by an unrelated project).
name = "shunt-gateway"
version = "0.3.0"
edition = "2021"
description = "Claude Code LLM gateway — an Anthropic Messages proxy that routes models to OpenAI/Codex and Anthropic-compatible backends"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pleaseai/shunt"
readme = "README.md"
keywords = ["claude", "gateway", "proxy", "anthropic", "openai"]
categories = ["command-line-utilities", "web-programming::http-server"]
# Keep the published tarball to what's needed to build and use the crate.
include = ["src/**", "README.md", "LICENSE-MIT", "LICENSE-APACHE", "shunt.toml.example"]

[lib]
name = "shunt"
path = "src/lib.rs"

[[bin]]
name = "shunt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sentry = { version = "0.48.4", default-features = false, features = ["backtrace", "contexts", "metrics", "panic", "reqwest", "rustls", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiktoken-rs = "0.12.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
