[package]
# crates.io package name; the library and binary keep the short name `shunt`
# (the bare `shunt` crate name is taken by an unrelated project).
name = "shunt-gateway"
version = "0.23.0"
edition = "2021"
description = "Claude Code LLM gateway — an Anthropic Messages proxy that routes models to OpenAI/Codex and Anthropic-compatible backends"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pleaseai/shunt"
readme = "README.md"
keywords = ["claude", "gateway", "proxy", "anthropic", "openai"]
categories = ["command-line-utilities", "web-programming::http-server"]
# Keep the published tarball to what's needed to build and use the crate.
include = ["src/**", "blueprints/**", "README.md", "LICENSE-MIT", "LICENSE-APACHE", "shunt.toml.example", "shunt.yaml.example"]

[lib]
name = "shunt"
path = "src/lib.rs"

[[bin]]
name = "shunt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arc-swap = "1.9.2"
axum = "0.8"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "yaml", "env"] }
flate2 = "1"
futures-util = "0.3"
# Parse the HTTP-date form of `Retry-After` (RFC 7231); already in the tree via
# reqwest/hyper, promoted to a direct dep for `accounts::retry_after`.
httpdate = "1"
hmac = "0.12"
notify = "8.2.0"
# OpenTelemetry export (opt-in `[otel]`). The OTLP exporter speaks HTTP/protobuf
# over reqwest's *blocking* client so the SDK's dedicated-thread batch span/log
# processors and periodic metric reader run fully independent of the axum
# serving runtime — no tokio handle threading, and telemetry init stays
# synchronous like `init_sentry`. reqwest-rustls-webpki-roots reuses reqwest's
# ring-backed rustls with bundled roots, matching the tokio-tungstenite TLS.
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "metrics", "logs", "http-proto", "reqwest-blocking-client", "reqwest-rustls-webpki-roots"] }
opentelemetry-appender-tracing = "0.32"
opentelemetry-semantic-conventions = "0.32"
prost = "0.13"
rand = "0.9"
regex-lite = "0.1"
# `http2` is required for the Cursor agent transport: `agent.v1.AgentService/Run`
# sits behind an AWS ALB that only serves HTTP/2 for that path, and an HTTP/1.1
# request is rejected with an empty `awselb/2.0` HTTP 464 (issue #170). With the
# feature enabled the shared client negotiates h2 via ALPN.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2", "json"] }
rpassword = "7"
# Feature unification compiles both rustls crypto providers into the binary
# (aws-lc-rs via sentry's reqwest `rustls` feature, ring via reqwest's own
# `rustls-tls` feature), so rustls refuses to auto-select one. tokio-tungstenite
# pulls rustls/tokio-rustls with no provider feature, so it needs the default
# installed. Depend on rustls directly to install the process-wide default on
# the first websocket handshake — see `ensure_crypto_provider` in
# src/adapters/codex_ws.rs.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
sentry = { version = "0.48.4", default-features = false, features = ["anyhow", "backtrace", "contexts", "metrics", "panic", "reqwest", "rustls", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tiktoken-rs = "0.12.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
# Codex Responses WebSocket v2 transport (issue #32). rustls + bundled webpki
# roots keeps TLS self-contained and consistent with reqwest's rustls-tls, with
# no OpenSSL/native-tls system dependency.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
url = "2.5.8"

[dev-dependencies]
divan = { version = "5.0.1", package = "codspeed-divan-compat" }
hex = "0.4"
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
wiremock = "0.6"

[[bench]]
name = "gateway"
harness = false
